--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ assets/img/misc/c2bf5716-762d-44e1-97e4-ba6b0db2926a_rw_1200 2.jpg
 assets/img/misc/d102e193-7b2c-4e6f-a961-447fc0cb2a0d_rw_1200 2.png
 assets/img/misc/d62790e6-9824-47d4-b14c-0c28d9da001f_rw_1200 2.png
 assets/img/misc/dc0bd755-3b32-4a7a-94ad-e9d822878047_rw_1200 2.jpg
+assets/.DS_Store
+assets/img/.DS_Store
